<resources>
    <string name="account_label_name">Bank Account Name</string>
    <string name="account_label_bsb">BSB</string>
    <string name="account_label_condition_bsb">(6 digits no spaces)</string>
    <string name="account_label_condition_abn">(11 digits no spaces)</string>
    <string name="account_label_number">Account Number</string>
    <string name="account_label_condition_number">(9 digits no spaces)</string>
    <string name="account_title">Bank Acc Details</string>
    <string name="account_save">Save</string>
    <string name="account_updated_message">Account details have been successfully updated.</string>
    <string name="company_label_name">Company Name</string>
    <string name="abn_name">ABN</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="app_name">ingogoDriver</string>
    <string name="major_ver">1</string>
    <string name="minor_ver">6</string>
    <string name="path_ver">1</string>
    <string name="login_title">Login</string>
    <string name="userid_label_text">Mobile Number</string>
    <string name="password_label_text">Password</string>
    <string name="forgot_password_new_label_text">New Password</string>
    <string name="forgot_password_label_text"><u>Forgot Password?</u></string>
    <string name="login_error_title">Login Error</string>
    <string name="userid_empty_message">Please enter a valid Mobile Number</string>
    <string name="forgot_password_alert">An SMS has been sent to your personal mobile phone. The SMS will contain your PIN No. Enter the PIN and a new password to reset your account. You will then be asked to login to the system using your new password.</string>
    <string name="gps_enable_message">Please enable your GPS and restart the application.</string>
    <string name="progress_dialog_message">Please wait while we fetch your location...</string>
    <string name="vehicle_plate_number_text"> Vehicle Number Plate</string>
    <string name="vehicle_plate_matching_text">Passengers will only get into a vehicle matching this plate</string>
    <string name="upgrade_alert_message">A new version is available. Press \'Upgrade\' to begin.</string>
    <string name="network_fetching_message">Please wait while we fetch your network preferences...</string>
    <string name="gps_fetch_message">Your device is acquiring your current location</string>
    <string name="gps_off_msg">We have detected that your GPS is switched off. Please enable your GPS and try again. If this message persists please contact ingogo support.</string>
    <string name="sorry_msg">Sorry,</string>
    <string name="settings_title">Settings</string>
    <string name="help_title">HELP</string>
    <string name="need_help_title">Need Help?</string>
    <string name="phone_call_label">Call</string>
    <string name="sms_label">SMS</string>
    <string name="email_label">Email</string>
    <string name="help_page_content">ingogo is in beta and we\'d really appreciate your feedback if you are experiencing any issues or wish to suggest improvements or additional features.</string>
    <string name="job_details_title">Job Details</string>
    <string name="AcceptedStatusLabel">Accepted</string>
    <string name="CollectedStatusLabel">Collected</string>
    <string name="CompletedStatusLabel">Completed</string>
    <string name="CancelledStatusLabel">Cancelled</string>
    <string name="CancelBookingTitle">Cancel Booking?</string>
    <string name="passenger_cancelled_alert">Job has been cancelled by passenger.</string>
    <string name="passenger_notconfirmed_alert">Passenger has indicated that they have not been collected.</string>
    <string name="passenger_dispatched_alert">Passenger has indicated that the booking has been dispatched to another network.</string>
    <string name="job_ignore_confirm_prompt">Are you sure you want to ignore this job?</string>
    <string name="passenger_no_show_alert">Are you sure the passenger did not show up?</string>
    <string name="job_completed_alert">Job Completed.</string>
    <string name="job_cancelled_alert">Job Cancelled.</string>
    <string name="passenger_label">Passenger </string>
    <string name="reward_label">Pick Up By / Reward</string>
    <string name="pickup_label">Pick Up </string>
    <string name="dropoff_label">Drop Off </string>
    <string name="pays_label">Reward Points </string>
    <string name="pickupby_label">Pickup By </string>
    <string name="jobs_inprogress_alert">The following job is in progress, please ensure this is completed.</string>
    <string name="status_label">Status:</string>
    <string name="job_preview_title">Job Preview</string>
    <string name="job_unavailable_alert">This job is no longer available.</string>
    <string name="job_details_updated_alert">The job details for this trip have changed. Please review the new pick-up time or reward before accepting again. </string>
    <string name="job_in_progress">Driver has a Job in progress. Can not accept another Job until current Job is completed/cancelled</string>
    <string name="job_cancelled_alert_job_preview">This job has been cancelled</string>
    <string name="see_map_text">Tap Pick up address for map view.</string>
    <string name="jobs_title">Jobs</string>
    <string name="available_label">I\'m available</string>
    <string name="busy_label">I\'m busy</string>
    <string name="pickup_dropoff_label">Pick Up / Drop Off</string>
    <string name="bid_label">Bid/Fare</string>
    <string name="pickup_reward_lable">Pick Up / Reward</string>
    <string name="asap_label">ASAP</string>
    <string name="busy_alert_msg">To select a job you must be available.</string>
    <string name="gps_unavailable">Unable to fetch GPS data</string>
    <string name="logout">Log out</string>
    <string name="try_again">Try again</string>
    <string name="locality_api_failed">Sorry, your request could not be processed.Please try again</string>
    <string name="network_error_title">Network Error</string>
    <string name="ReachabilityMessage">No Internet connection detected. Please try again later. </string>
    <string name="unknown_error_message">System error. Contact taxisupport@ingogo.mobi</string>
    <string name="system_unavailable_message">Network Error. Please ensure that you have connectivity. If symptoms persist, please contact taxisupport@ingogo.mobi</string>
    <string name="unexpected_error">An unexpected error has occurred</string>
    <string name="application_error_message">Application Error. Please re-try operation. If symptoms persist, please contact taxisupport@ingogo.mobi</string>
    <string name="chat_title">Chat</string>
    <string name="message_label">Messages</string>
    <string name="passenger_not_receive_chat_lablel">Passenger did not receive your chat.</string>
    <string name="logout_title">LOG OUT</string>
    <string name="jobs_menu_title">JOBS</string>
    <string name="account_info_title">ACCOUNT INFO</string>
    <string name="config_title">PRINTER CONFIG</string>
    <string name="reprint_receipt_title">RE-PRINT LAST RECEIPT</string>
    <string name="print_referal_title">PRINT REFERRAL</string>
    <string name="account_settings_title">ACCOUNT / SETTINGS</string>
    <string name="printer_configure_menu_title">PRINTER CONFIG</string>
    <string name="api_fetch_error_title">API ERROR</string>
    <string name="api_fetch_error_message">We are unable to fetch api contents</string>
    <string name="change_password_alert_message">Your password has been changed successfully</string>
    <string name="change_password_title">Password Change</string>
    <string name="passphrase_label">PIN Number</string>
    <string name="payment_completion_title">Completed</string>
    <string name="total_paid">Total Paid</string>
    <string name="payment_gst">(incl. GST)</string>
    <string name="payment_successful">Your payment is successful!</string>
    <string name="payment_charge">Your card has been charged successfully.</string>
    <string name="payment_charge_with_no_due">Your booking has been completed successfully !!!</string>
    <string name="payment_ereceipt">A digital receipt has been issued.</string>
    <string name="payment_done">Done</string>
    <string name="payment_page_title">Calculator</string>
    <string name="payment_pickup_label">Pick Up:</string>
    <string name="payment_dropoff_label">Drop Off:</string>
    <string name="totaldue_label">Total Fare:</string>
    <string name="bookingfee_label">ingogo Base Fee:</string>
    <string name="bidamount_label">ingogo Service Fee:</string>
    <string name="bidcredit_label">ingogo Service Credit:</string>
    <string name="totalpaymentdue_label">Total Payment Due</string>
    <string name="surcharge_label">Credit card surcharge</string>
    <string name="booking_fee_value">1.80</string>
    <string name="payment_lodged_message">Payment details have been lodged.</string>
    <string name="fare_hint_text">00.00</string>
    <string name="data_time_out_error_message">You\'ve lost ingogo, reconnecting now.</string>
    <string name="notification_details_title">Notification Details</string>
    <string name="notification_text">We have set you as "I'm busy" as you have been inactive for more than 15 mins. Please set your status as "I'm available" to receive jobs</string>
    <string name="payoffline_issue_dialog_msg">If you have pressed Pay-offline because of a problem, press ISSUE, otherwise select CLOSE.</string>
    <string name="notification_title">ingogo Alert, Click Me!</string>
    <string name="offline_message">ingogo fees for this trip amounts to $00.00. Remember to include this in the overall amount charged. (Note: This amount is the total of ingogo Base Fee + ingogo Service Fee)</string>
    <string name="payment_failure_title">Failed</string>
    <string name="payment_failure_message">An error has occurred</string>
    <string name="payment_pin_error_string">Invalid PIN entered 2 times in succession. The passenger account has been disabled. Please contact ingogo support to re-activate your account. Payment for this trip will have to be processed outside of the ingogo payment system. You will not be able to use any ingogo credits on this trip.\n\nThe revised minimum fare that you will be charged is: </string>
    <string name="payment_card_error_string">Card error.....</string>
    <string name="payment_connection_error_string">Connection lost....</string>
    <string name="payment_credit_limit_error_string">Valid pin. Credit limit exceeded.....</string>
    <string name="payment_card_expired_error_string">Valid pin. Card expired.....</string>
    <string name="payment_unspecified_failure_error_string">Your payment attempt has been unsuccessful. Please try again. If problem persists pay off-line and contact support@ingogo.mobi</string>
    <string name="total_payment_due_label">Total Payment Due:</string>
    <string name="payment_due_reason_label">(excluding any 3rd party fees that may be applied)</string>
    <string name="enter_fare_amt">Please enter a fare amount and try again.</string>
    <string name="enter_fare_amt_zero">Total Fare amount can not be 0. Please re-enter.</string>
    <string name="keyboard_shown_text">Cannot swipe a card until the keyboard is closed. Close keyboard and then swipe.</string>
    <string name="trip_cost">The cost of this trip is as follows:</string>
    <string name="trip_charge">Trip Charge:</string>
    <string name="excluding_third_party_charges">(excluding any 3rd party fees that may be applied)</string>
    <string name="payment_successfull">Your payment was successfull</string>
    <string name="or_text">OR</string>
    <string name="enter_mob_num">Enter Mobile number</string>
    <string name="enter_email">Enter Email address</string>
    <string name="email_text">Email Address</string>
</resources>