<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/payment_title_bar"
        style="?titleBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="?text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:paddingRight="16dp"
            android:shadowColor="#FFFFFF"
            android:shadowDy="1"
            android:text="@string/payment_completion_title"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            style="?themeSwitchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:onClick="changeTheme" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/payment_title_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-5dp" 
        style="?paymentCompletedBG">
		<TextView 
			style="?text" 
			android:textSize="15dp"
			android:textStyle="bold" 
			android:text="@string/total_paid"
			android:id="@+id/totPaidTV" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp" 
			android:layout_centerHorizontal="true">
		</TextView>
		<TextView 
			style="?text" 
			android:textSize="10dp"
			android:textStyle="bold" 
			android:text="@string/payment_gst"
			android:id="@+id/gstTV" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_centerHorizontal="true"
			android:layout_below="@+id/totPaidTV">
		</TextView>
		<RelativeLayout 
			android:id="@+id/totalPaidRL"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_below="@+id/gstTV" 
			android:layout_centerHorizontal="true"
			android:layout_marginTop="5dp">
			<TextView 
				style="?pricesText" 
				android:text="$"
				android:textSize="20dp"
				android:textStyle="bold" 
				android:id="@+id/dollarTV"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			</TextView>
			<TextView 
				style="?pricesText" 
				android:text="TextView"
				android:textSize="20dp"
				android:textStyle="bold"
				android:id="@+id/totalPaidTV"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:layout_toRightOf="@+id/dollarTV" 
				android:layout_marginLeft="5dp">
			</TextView>
		</RelativeLayout>
		<TextView 
			style="?text" 
			android:textSize="15dp"
			android:textStyle="bold" 
			android:text="@string/payment_successfull"
			android:id="@+id/paymentSuccessfullTV" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_below="@+id/totalPaidRL"
			android:layout_centerHorizontal="true" 
			android:layout_marginTop="27dp">
		</TextView>
		<Button
            android:id="@+id/bPrintReceipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="7dp"
            android:background="@drawable/print" 
            android:layout_marginTop="13dp"
            android:layout_below="@+id/paymentSuccessfullTV"
            android:onClick="onPrintReceiptButtonClick">
        </Button>
		<TextView 
			style="?greyText" 
			android:textSize="15dp"
			android:text="@string/userid_label_text" 
			android:id="@+id/mobileNumTV"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_below="@+id/bPrintReceipt" 
			android:layout_marginLeft="25dp">
		</TextView>
		<EditText 
			style="?editText" 
			android:inputType="phone"
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"
			android:id="@+id/mobileNumET" 
			android:hint="@string/enter_mob_num"
			android:maxLength="12" 
			android:textColorHint="@color/grey_color"
			android:paddingLeft="5dp" 
			android:layout_below="@+id/mobileNumTV"
			android:background="@drawable/edit_text_bg"
			android:layout_centerHorizontal="true" 
			android:imeOptions="actionDone">
		</EditText>
		<TextView 
			style="?text" 
			android:textSize="25dp"
			android:textStyle="bold" 
			android:text="@string/or_text" 
			android:id="@+id/orTV"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_below="@+id/mobileNumET"
			android:layout_centerHorizontal="true" 
			android:layout_marginTop="5dp">
		</TextView>
		<TextView 
			style="?greyText" 
			android:textSize="15dp"
			android:text="@string/email_text" 
			android:id="@+id/emailTV"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_below="@+id/orTV" 
			android:layout_marginLeft="25dp"
			android:layout_marginTop="0dp">
		</TextView>
		<EditText 
			style="?editText" 
			android:inputType="textEmailAddress"
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"
			android:id="@+id/emailET" 
			android:hint="@string/enter_email"
			android:paddingLeft="5dp" 
			android:textColorHint="@color/grey_color"
			android:maxLength="60" 
			android:layout_below="@+id/emailTV"
			android:background="@drawable/edit_text_bg"
			android:layout_centerHorizontal="true">
		</EditText>
		<RelativeLayout 
			android:id="@+id/buttonsRL"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_centerHorizontal="true" 
			android:layout_marginBottom="5dp">
			<Button 
				android:id="@+id/skipBtn" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:background="@drawable/skip_button"
				android:onClick="onSkipButtonClick">
			</Button>
			<Button 
				android:id="@+id/sendReceiptBtn" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:layout_toRightOf="@+id/skipBtn"
				android:background="@drawable/send_receipt_btn"
				android:layout_marginLeft="10dp" 
				android:onClick="onSendReceiptButtonClick">
			</Button>
		</RelativeLayout>
	</RelativeLayout>
</RelativeLayout>

