<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="?paymentSuccessBG"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title_layout"
        style="?titleBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="?text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:shadowColor="#363636"
            android:shadowDy="1"
            android:text="@string/payment_completion_title"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            style="?themeSwitchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:onClick="changeTheme" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/totalpaid_Layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/totalText"
            style="?text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="50dp"
            android:text="@string/total_paid"
            android:textSize="20dp"
            android:textStyle="bold" >
        </TextView>

        <TextView
            android:id="@+id/textGST"
            style="?text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/totalText"
            android:layout_marginLeft="90dp"
            android:text="@string/payment_gst"
            android:textSize="10dp"
            android:textStyle="bold" >
        </TextView>

        <TextView
            android:id="@+id/paidText"
            style="?pricesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/totalText"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/totalText"
            android:text="TextView"
            android:textSize="20dp"
            android:textStyle="bold" >
        </TextView>

        <TextView
            android:id="@+id/paymentSuccessfulText"
            style="?greenText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/totalText"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:textSize="18dp"
            android:textStyle="bold" >
        </TextView>

        <TextView
            android:id="@+id/paymentChargeText"
            style="?greyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/paymentSuccessfulText"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/payment_charge"
            android:textSize="17dp" >
        </TextView>

        <TextView
            android:id="@+id/paymentEreceiptText"
            style="?greyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/paymentChargeText"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/payment_ereceipt"
            android:textSize="17dp" >
        </TextView>
        
        <Button
            android:id="@+id/bDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/done_button_selector" >
        </Button>
    </RelativeLayout>

</RelativeLayout>