<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="?paymentFailureNewBG"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- title -->

    <RelativeLayout
        android:id="@+id/payment_failure_title_bar"
        style="?titleBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="?text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:paddingRight="16dp"
            android:shadowColor="#FFFFFF"
            android:shadowDy="1"
            android:text="@string/payment_failure_title"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            style="?themeSwitchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:onClick="changeTheme" />
    </RelativeLayout>
    <RelativeLayout 
    	android:id="@+id/relativeLayout1" 
    	android:layout_width="fill_parent" 
    	android:layout_height="fill_parent" 
    	android:layout_below="@+id/payment_failure_title_bar" >
    	<RelativeLayout
    		style="?paymentScrollAreaBG" 
    		android:id="@+id/relativeLayout6" 
    		android:layout_width="fill_parent" 
    		android:layout_height="150dp"
    		android:layout_alignParentTop="true" 
        	android:layout_alignParentRight="true" 
        	android:layout_alignParentLeft="true"
        	android:layout_marginLeft="10dp"
        	android:layout_marginRight="10dp"
        	android:layout_marginTop="10dp">
    		<ScrollView 
    			android:id="@+id/scrollView1" 
    			android:layout_width="wrap_content" 
    			android:layout_height="wrap_content">
    			<LinearLayout 
    				android:id="@+id/linearLayout1" 
    				android:layout_width="fill_parent" 
    				android:layout_height="fill_parent">
    				<TextView 
    					style="?text"
    					android:text="@string/payment_pin_error_string"
    					android:textSize="15dp" 
    					android:id="@+id/failureReasonTV" 
    					android:layout_width="fill_parent" 
    					android:layout_height="fill_parent"
    					android:padding="10dp"
    				></TextView>
    			</LinearLayout>
    		</ScrollView> 
        </RelativeLayout>
        <RelativeLayout 
        	android:id="@+id/relativeLayout2" 
        	android:layout_width="fill_parent" 
        	android:layout_height="30dp" 
        	android:layout_below="@+id/relativeLayout6" 
        	android:layout_marginTop="17dp">
            <TextView
            	style="?text" 
            	android:text="@string/totaldue_label"
            	android:textSize="17dp"
            	android:textStyle="bold" 
            	android:id="@+id/textView1" 
            	android:layout_width="wrap_content" 
            	android:layout_height="wrap_content"
            	android:layout_marginLeft="130dp"
            ></TextView>
            <TextView
            	style="?pricesText" 
            	android:id="@+id/totalFareTV"
            	android:textSize="17dp"
            	android:textStyle="bold"   
            	android:layout_width="wrap_content" 
            	android:layout_height="wrap_content"
            	android:layout_toRightOf="@+id/textView1"
            	android:layout_marginLeft="10dp"
            ></TextView>
        </RelativeLayout>
        <RelativeLayout 
        	android:id="@+id/relativeLayout3" 
        	android:layout_width="fill_parent" 
        	android:layout_height="30dp" 
        	android:layout_below="@+id/relativeLayout2" 
        	android:layout_marginTop="3dp">
            <TextView
            	style="?text" 
            	android:text="@string/bookingfee_label"
            	android:textSize="17dp"
            	android:textStyle="bold"             	 
            	android:id="@+id/textView2" 
            	android:layout_width="wrap_content" 
            	android:layout_height="wrap_content"
            	android:layout_marginLeft="80dp"
            ></TextView>
            <TextView
            	style="?pricesText" 
            	android:id="@+id/baseFeeTV"
            	android:textSize="17dp"
            	android:textStyle="bold"   
            	android:layout_width="wrap_content" 
            	android:layout_height="wrap_content"
            	android:layout_toRightOf="@+id/textView2"
            	android:layout_marginLeft="10dp"
            ></TextView>
        </RelativeLayout>
        <RelativeLayout 
        	android:id="@+id/relativeLayout4" 
        	android:layout_width="fill_parent" 
        	android:layout_height="30dp" 
        	android:layout_below="@+id/relativeLayout3" 
        	android:layout_marginTop="3dp">
            <TextView 
            	style="?text"
            	android:text="@string/bidamount_label"
            	android:textSize="17dp"
            	android:textStyle="bold"  
            	android:id="@+id/textView3" 
            	android:layout_width="wrap_content" 
            	android:layout_height="wrap_content"
            	android:layout_marginLeft="61dp"
            ></TextView>
            <TextView
            	style="?pricesText" 
            	android:id="@+id/serviceFeeTV" 
            	android:textSize="17dp"
            	android:textStyle="bold"              	
            	android:layout_width="wrap_content" 
            	android:layout_height="wrap_content"
            	android:layout_toRightOf="@+id/textView3"
            	android:layout_marginLeft="10dp"
            ></TextView>
        </RelativeLayout>
        <RelativeLayout 
        	android:id="@+id/relativeLayout5" 
        	android:layout_width="fill_parent" 
        	android:layout_height="wrap_content" 
        	android:layout_below="@+id/relativeLayout4" 
        	android:layout_marginTop="13dp">
            <TextView 
            	style="?text"
            	android:text="@string/total_payment_due_label"
            	android:textSize="17dp"
            	android:textStyle="bold"  
            	android:id="@+id/textView4" 
            	android:layout_width="wrap_content" 
            	android:layout_height="wrap_content"
            	android:layout_marginLeft="55dp"
            ></TextView>
            <TextView
            	style="?pricesText" 
            	android:id="@+id/totalPaymentDueTV"
            	android:textSize="17dp"
            	android:textStyle="bold"   
            	android:layout_width="wrap_content" 
            	android:layout_height="wrap_content"
            	android:layout_toRightOf="@+id/textView4"
            	android:layout_marginLeft="10dp"
            ></TextView>
        </RelativeLayout>
        <TextView
        	style="?text" 
        	android:text="@string/payment_due_reason_label"
        	android:textSize="12dp" 
        	android:id="@+id/textView5" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content"
        	android:layout_below="@+id/relativeLayout5"
        	android:layout_marginTop="5dp"
        	android:layout_centerHorizontal="true"
        ></TextView>
        <Button 
        	android:id="@+id/bPayOffline" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content"
            android:background="@drawable/payment_failure_payoffline_btn_selector"
        	android:layout_centerHorizontal="true"
        	android:layout_alignParentBottom="true"
        	android:layout_marginBottom="15dp"
        	android:onClick="onPayOfflineButtonClick"
        ></Button>
    </RelativeLayout>
</RelativeLayout>